output/tigerParser.java
// $ANTLR 3.5.1 /Users/twb/repos/Tiger/Tiger.g 2014-10-04 17:29:34

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class TigerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ASSIGN", "BEGIN", 
		"BLOCK", "BREAK", "COLON", "COMMA", "COMMENT", "DIV", "DO", "ELSE", "END", 
		"ENDDO", "ENDIF", "EQ", "EXPRS", "FIXEDPT", "FIXEDPTLIT", "FOR", "FUNCTION", 
		"GREATER", "GREATEREQ", "ID", "IDS", "IF", "INT", "INTLIT", "LBRACK", 
		"LESSER", "LESSEREQ", "LPAREN", "MAIN", "MINUS", "MULT", "NEQ", "OF", 
		"OR", "PARAMS", "PLUS", "RBRACK", "RETURN", "RPAREN", "SEMI", "THEN", 
		"TO", "TYPE", "VAR", "VOID", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ARRAY=5;
	public static final int ASSIGN=6;
	public static final int BEGIN=7;
	public static final int BLOCK=8;
	public static final int BREAK=9;
	public static final int COLON=10;
	public static final int COMMA=11;
	public static final int COMMENT=12;
	public static final int DIV=13;
	public static final int DO=14;
	public static final int ELSE=15;
	public static final int END=16;
	public static final int ENDDO=17;
	public static final int ENDIF=18;
	public static final int EQ=19;
	public static final int EXPRS=20;
	public static final int FIXEDPT=21;
	public static final int FIXEDPTLIT=22;
	public static final int FOR=23;
	public static final int FUNCTION=24;
	public static final int GREATER=25;
	public static final int GREATEREQ=26;
	public static final int ID=27;
	public static final int IDS=28;
	public static final int IF=29;
	public static final int INT=30;
	public static final int INTLIT=31;
	public static final int LBRACK=32;
	public static final int LESSER=33;
	public static final int LESSEREQ=34;
	public static final int LPAREN=35;
	public static final int MAIN=36;
	public static final int MINUS=37;
	public static final int MULT=38;
	public static final int NEQ=39;
	public static final int OF=40;
	public static final int OR=41;
	public static final int PARAMS=42;
	public static final int PLUS=43;
	public static final int RBRACK=44;
	public static final int RETURN=45;
	public static final int RPAREN=46;
	public static final int SEMI=47;
	public static final int THEN=48;
	public static final int TO=49;
	public static final int TYPE=50;
	public static final int VAR=51;
	public static final int VOID=52;
	public static final int WHILE=53;
	public static final int WS=54;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TigerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TigerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return TigerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/twb/repos/Tiger/Tiger.g"; }


	public static class tiger_program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "tiger_program"
	// /Users/twb/repos/Tiger/Tiger.g:20:1: tiger_program : type_declaration_list funct_declaration_list main_function ;
	public final TigerParser.tiger_program_return tiger_program() throws RecognitionException {
		TigerParser.tiger_program_return retval = new TigerParser.tiger_program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope type_declaration_list1 =null;
		ParserRuleReturnScope funct_declaration_list2 =null;
		ParserRuleReturnScope main_function3 =null;


		try {
			// /Users/twb/repos/Tiger/Tiger.g:20:14: ( type_declaration_list funct_declaration_list main_function )
			// /Users/twb/repos/Tiger/Tiger.g:20:16: type_declaration_list funct_declaration_list main_function
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_type_declaration_list_in_tiger_program58);
			type_declaration_list1=type_declaration_list();
			state._fsp--;

			adaptor.addChild(root_0, type_declaration_list1.getTree());

			pushFollow(FOLLOW_funct_declaration_list_in_tiger_program60);
			funct_declaration_list2=funct_declaration_list();
			state._fsp--;

			adaptor.addChild(root_0, funct_declaration_list2.getTree());

			pushFollow(FOLLOW_main_function_in_tiger_program62);
			main_function3=main_function();
			state._fsp--;

			adaptor.addChild(root_0, main_function3.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tiger_program"


	public static class type_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type_declaration_list"
	// /Users/twb/repos/Tiger/Tiger.g:22:1: type_declaration_list : ( type_declaration type_declaration_list |);
	public final TigerParser.type_declaration_list_return type_declaration_list() throws RecognitionException {
		TigerParser.type_declaration_list_return retval = new TigerParser.type_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope type_declaration4 =null;
		ParserRuleReturnScope type_declaration_list5 =null;


		try {
			// /Users/twb/repos/Tiger/Tiger.g:23:2: ( type_declaration type_declaration_list |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==TYPE) ) {
				alt1=1;
			}
			else if ( (LA1_0==BEGIN||LA1_0==BREAK||(LA1_0 >= ELSE && LA1_0 <= ENDIF)||LA1_0==FIXEDPT||LA1_0==FOR||LA1_0==ID||(LA1_0 >= IF && LA1_0 <= INT)||LA1_0==RETURN||(LA1_0 >= VAR && LA1_0 <= WHILE)) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// /Users/twb/repos/Tiger/Tiger.g:23:4: type_declaration type_declaration_list
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_type_declaration_in_type_declaration_list71);
					type_declaration4=type_declaration();
					state._fsp--;

					adaptor.addChild(root_0, type_declaration4.getTree());

					pushFollow(FOLLOW_type_declaration_list_in_type_declaration_list73);
					type_declaration_list5=type_declaration_list();
					state._fsp--;

					adaptor.addChild(root_0, type_declaration_list5.getTree());

					}
					break;
				case 2 :
					// /Users/twb/repos/Tiger/Tiger.g:25:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type_declaration_list"


	public static class type_declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type_declaration"
	// /Users/twb/repos/Tiger/Tiger.g:27:1: type_declaration : ( TYPE ID EQ type SEMI ) -> ^( TYPE ID type ) ;
	public final TigerParser.type_declaration_return type_declaration() throws RecognitionException {
		TigerParser.type_declaration_return retval = new TigerParser.type_declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token TYPE6=null;
		Token ID7=null;
		Token EQ8=null;
		Token SEMI10=null;
		ParserRuleReturnScope type9 =null;

		Object TYPE6_tree=null;
		Object ID7_tree=null;
		Object EQ8_tree=null;
		Object SEMI10_tree=null;
		RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_EQ=new RewriteRuleTokenStream(adaptor,"token EQ");
		RewriteRuleTokenStream stream_TYPE=new RewriteRuleTokenStream(adaptor,"token TYPE");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:28:2: ( ( TYPE ID EQ type SEMI ) -> ^( TYPE ID type ) )
			// /Users/twb/repos/Tiger/Tiger.g:28:4: ( TYPE ID EQ type SEMI )
			{
			// /Users/twb/repos/Tiger/Tiger.g:28:4: ( TYPE ID EQ type SEMI )
			// /Users/twb/repos/Tiger/Tiger.g:28:5: TYPE ID EQ type SEMI
			{
			TYPE6=(Token)match(input,TYPE,FOLLOW_TYPE_in_type_declaration89);  
			stream_TYPE.add(TYPE6);

			ID7=(Token)match(input,ID,FOLLOW_ID_in_type_declaration91);  
			stream_ID.add(ID7);

			EQ8=(Token)match(input,EQ,FOLLOW_EQ_in_type_declaration93);  
			stream_EQ.add(EQ8);

			pushFollow(FOLLOW_type_in_type_declaration95);
			type9=type();
			state._fsp--;

			stream_type.add(type9.getTree());
			SEMI10=(Token)match(input,SEMI,FOLLOW_SEMI_in_type_declaration97);  
			stream_SEMI.add(SEMI10);

			}

			// AST REWRITE
			// elements: type, ID, TYPE
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 28:27: -> ^( TYPE ID type )
			{
				// /Users/twb/repos/Tiger/Tiger.g:28:30: ^( TYPE ID type )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_TYPE.nextNode(), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_type.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type_declaration"


	public static class funct_declaration_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funct_declaration_list"
	// /Users/twb/repos/Tiger/Tiger.g:31:1: funct_declaration_list : ( funct_declaration funct_declaration_list |);
	public final TigerParser.funct_declaration_list_return funct_declaration_list() throws RecognitionException {
		TigerParser.funct_declaration_list_return retval = new TigerParser.funct_declaration_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope funct_declaration11 =null;
		ParserRuleReturnScope funct_declaration_list12 =null;


		try {
			// /Users/twb/repos/Tiger/Tiger.g:32:2: ( funct_declaration funct_declaration_list |)
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==VOID) ) {
				int LA2_1 = input.LA(2);
				if ( (LA2_1==MAIN) ) {
					alt2=2;
				}
				else if ( (LA2_1==FUNCTION) ) {
					alt2=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA2_0==FIXEDPT||LA2_0==ID||LA2_0==INT) ) {
				alt2=1;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /Users/twb/repos/Tiger/Tiger.g:32:4: funct_declaration funct_declaration_list
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_funct_declaration_in_funct_declaration_list119);
					funct_declaration11=funct_declaration();
					state._fsp--;

					adaptor.addChild(root_0, funct_declaration11.getTree());

					pushFollow(FOLLOW_funct_declaration_list_in_funct_declaration_list121);
					funct_declaration_list12=funct_declaration_list();
					state._fsp--;

					adaptor.addChild(root_0, funct_declaration_list12.getTree());

					}
					break;
				case 2 :
					// /Users/twb/repos/Tiger/Tiger.g:34:2: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "funct_declaration_list"


	public static class funct_declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "funct_declaration"
	// /Users/twb/repos/Tiger/Tiger.g:36:1: funct_declaration : ret_type FUNCTION ID LPAREN param_list RPAREN BEGIN block_list END SEMI -> ^( ID param_list block_list ) ;
	public final TigerParser.funct_declaration_return funct_declaration() throws RecognitionException {
		TigerParser.funct_declaration_return retval = new TigerParser.funct_declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token FUNCTION14=null;
		Token ID15=null;
		Token LPAREN16=null;
		Token RPAREN18=null;
		Token BEGIN19=null;
		Token END21=null;
		Token SEMI22=null;
		ParserRuleReturnScope ret_type13 =null;
		ParserRuleReturnScope param_list17 =null;
		ParserRuleReturnScope block_list20 =null;

		Object FUNCTION14_tree=null;
		Object ID15_tree=null;
		Object LPAREN16_tree=null;
		Object RPAREN18_tree=null;
		Object BEGIN19_tree=null;
		Object END21_tree=null;
		Object SEMI22_tree=null;
		RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
		RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
		RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
		RewriteRuleTokenStream stream_BEGIN=new RewriteRuleTokenStream(adaptor,"token BEGIN");
		RewriteRuleTokenStream stream_FUNCTION=new RewriteRuleTokenStream(adaptor,"token FUNCTION");
		RewriteRuleSubtreeStream stream_ret_type=new RewriteRuleSubtreeStream(adaptor,"rule ret_type");
		RewriteRuleSubtreeStream stream_block_list=new RewriteRuleSubtreeStream(adaptor,"rule block_list");
		RewriteRuleSubtreeStream stream_param_list=new RewriteRuleSubtreeStream(adaptor,"rule param_list");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:37:2: ( ret_type FUNCTION ID LPAREN param_list RPAREN BEGIN block_list END SEMI -> ^( ID param_list block_list ) )
			// /Users/twb/repos/Tiger/Tiger.g:37:4: ret_type FUNCTION ID LPAREN param_list RPAREN BEGIN block_list END SEMI
			{
			pushFollow(FOLLOW_ret_type_in_funct_declaration136);
			ret_type13=ret_type();
			state._fsp--;

			stream_ret_type.add(ret_type13.getTree());
			FUNCTION14=(Token)match(input,FUNCTION,FOLLOW_FUNCTION_in_funct_declaration138);  
			stream_FUNCTION.add(FUNCTION14);

			ID15=(Token)match(input,ID,FOLLOW_ID_in_funct_declaration140);  
			stream_ID.add(ID15);

			LPAREN16=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_funct_declaration142);  
			stream_LPAREN.add(LPAREN16);

			pushFollow(FOLLOW_param_list_in_funct_declaration144);
			param_list17=param_list();
			state._fsp--;

			stream_param_list.add(param_list17.getTree());
			RPAREN18=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_funct_declaration146);  
			stream_RPAREN.add(RPAREN18);

			BEGIN19=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_funct_declaration148);  
			stream_BEGIN.add(BEGIN19);

			pushFollow(FOLLOW_block_list_in_funct_declaration150);
			block_list20=block_list();
			state._fsp--;

			stream_block_list.add(block_list20.getTree());
			END21=(Token)match(input,END,FOLLOW_END_in_funct_declaration152);  
			stream_END.add(END21);

			SEMI22=(Token)match(input,SEMI,FOLLOW_SEMI_in_funct_declaration154);  
			stream_SEMI.add(SEMI22);

			// AST REWRITE
			// elements: ID, param_list, block_list
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 37:76: -> ^( ID param_list block_list )
			{
				// /Users/twb/repos/Tiger/Tiger.g:37:79: ^( ID param_list block_list )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_ID.nextNode(), root_1);
				adaptor.addChild(root_1, stream_param_list.nextTree());
				adaptor.addChild(root_1, stream_block_list.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "funct_declaration"


	public static class main_function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "main_function"
	// /Users/twb/repos/Tiger/Tiger.g:40:1: main_function : ( VOID MAIN LPAREN RPAREN block_list EOF ) -> ^( MAIN block_list ) ;
	public final TigerParser.main_function_return main_function() throws RecognitionException {
		TigerParser.main_function_return retval = new TigerParser.main_function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VOID23=null;
		Token MAIN24=null;
		Token LPAREN25=null;
		Token RPAREN26=null;
		Token EOF28=null;
		ParserRuleReturnScope block_list27 =null;

		Object VOID23_tree=null;
		Object MAIN24_tree=null;
		Object LPAREN25_tree=null;
		Object RPAREN26_tree=null;
		Object EOF28_tree=null;
		RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
		RewriteRuleTokenStream stream_MAIN=new RewriteRuleTokenStream(adaptor,"token MAIN");
		RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
		RewriteRuleTokenStream stream_VOID=new RewriteRuleTokenStream(adaptor,"token VOID");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_block_list=new RewriteRuleSubtreeStream(adaptor,"rule block_list");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:41:2: ( ( VOID MAIN LPAREN RPAREN block_list EOF ) -> ^( MAIN block_list ) )
			// /Users/twb/repos/Tiger/Tiger.g:41:4: ( VOID MAIN LPAREN RPAREN block_list EOF )
			{
			// /Users/twb/repos/Tiger/Tiger.g:41:4: ( VOID MAIN LPAREN RPAREN block_list EOF )
			// /Users/twb/repos/Tiger/Tiger.g:41:5: VOID MAIN LPAREN RPAREN block_list EOF
			{
			VOID23=(Token)match(input,VOID,FOLLOW_VOID_in_main_function177);  
			stream_VOID.add(VOID23);

			MAIN24=(Token)match(input,MAIN,FOLLOW_MAIN_in_main_function179);  
			stream_MAIN.add(MAIN24);

			LPAREN25=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_main_function181);  
			stream_LPAREN.add(LPAREN25);

			RPAREN26=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_main_function183);  
			stream_RPAREN.add(RPAREN26);

			pushFollow(FOLLOW_block_list_in_main_function185);
			block_list27=block_list();
			state._fsp--;

			stream_block_list.add(block_list27.getTree());
			EOF28=(Token)match(input,EOF,FOLLOW_EOF_in_main_function187);  
			stream_EOF.add(EOF28);

			}

			// AST REWRITE
			// elements: block_list, MAIN
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 41:45: -> ^( MAIN block_list )
			{
				// /Users/twb/repos/Tiger/Tiger.g:41:48: ^( MAIN block_list )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot(stream_MAIN.nextNode(), root_1);
				adaptor.addChild(root_1, stream_block_list.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "main_function"


	public static class ret_type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ret_type"
	// /Users/twb/repos/Tiger/Tiger.g:44:1: ret_type : ( VOID | type_id );
	public final TigerParser.ret_type_return ret_type() throws RecognitionException {
		TigerParser.ret_type_return retval = new TigerParser.ret_type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VOID29=null;
		ParserRuleReturnScope type_id30 =null;

		Object VOID29_tree=null;

		try {
			// /Users/twb/repos/Tiger/Tiger.g:45:2: ( VOID | type_id )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==VOID) ) {
				alt3=1;
			}
			else if ( (LA3_0==FIXEDPT||LA3_0==ID||LA3_0==INT) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/twb/repos/Tiger/Tiger.g:45:5: VOID
					{
					root_0 = (Object)adaptor.nil();


					VOID29=(Token)match(input,VOID,FOLLOW_VOID_in_ret_type209); 
					VOID29_tree = (Object)adaptor.create(VOID29);
					adaptor.addChild(root_0, VOID29_tree);

					}
					break;
				case 2 :
					// /Users/twb/repos/Tiger/Tiger.g:46:5: type_id
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_type_id_in_ret_type215);
					type_id30=type_id();
					state._fsp--;

					adaptor.addChild(root_0, type_id30.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ret_type"


	public static class param_list_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "param_list"
	// /Users/twb/repos/Tiger/Tiger.g:49:1: param_list : ( param param_list_tail -> ^( PARAMS param param_list_tail ) |);
	public final TigerParser.param_list_return param_list() throws RecognitionException {
		TigerParser.param_list_return retval = new TigerParser.param_list_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope param31 =null;
		ParserRuleReturnScope param_list_tail32 =null;

		RewriteRuleSubtreeStream stream_param_list_tail=new RewriteRuleSubtreeStream(adaptor,"rule param_list_tail");
		RewriteRuleSubtreeStream stream_param=new RewriteRuleSubtreeStream(adaptor,"rule param");

		try {
			// /Users/twb/repos/Tiger/Tiger.g:50:2: ( param param_list_tail -> ^( PARAMS param param_list_tail ) |)
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID) ) {
				alt4=1;
			}
			else if ( (LA4_0==RPAREN) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// /Users/twb/repos/Tiger/Tiger.g:50:4: param param_list_tail
					{
					pushFollow(FOLLOW_param_in_param_list226);
					param31=param();
					state._fsp--;

					stream_param.add(param31.getTree());
					pushFollow(FOLLOW_param_list_tail_in_param_list228);
					param_list_tail32=param_list_tail();
					state._fsp--;

					stream_param_list_tail.add(param_list_tail32.getTree());
					// AST REWRITE
					// elements: param, param_list_tail
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
